--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,8 @@
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>5.7.1</version>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.7.2</version>
             <scope>test</scope>
         </dependency>
 
@@ -70,6 +70,7 @@
             <artifactId>commons-io</artifactId>
             <version>2.8.0</version>
         </dependency>
+
     </dependencies>
 
 </project>
