--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
+    <packaging>jar</packaging>
     <artifactId>SberTask</artifactId>
     <version>1.0-SNAPSHOT</version>
 
